// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ReferenceDetailHeader/> should render 1`] = `
<ViewHeader
  title="baz"
>
  <ViewHeader__ViewHeaderTitle>
    baz
    <ViewHeader__ViewHeaderIcons>
      <ReferenceDetailHeaderIcon
        canModify={true}
        isRemote={true}
        onEdit={[MockFunction]}
      />
    </ViewHeader__ViewHeaderIcons>
  </ViewHeader__ViewHeaderTitle>
  <ViewHeader__ViewHeaderAttribution
    time="foo"
    user={1}
  />
</ViewHeader>
`;

exports[`<ReferenceDetailHeader/> should render when [showIcons=false] 1`] = `
<ViewHeader
  title="baz"
>
  <ViewHeader__ViewHeaderTitle>
    baz
  </ViewHeader__ViewHeaderTitle>
  <ViewHeader__ViewHeaderAttribution
    time="foo"
    user={1}
  />
</ViewHeader>
`;

exports[`<ReferenceDetailHeaderIcon /> should render 1`] = `
<Icon
  color="grey"
  faStyle="fas"
  fixedWidth={false}
  name="lock"
/>
`;

exports[`<ReferenceDetailHeaderIcon /> should render when [both canModify=false, isRemote=false] 1`] = `""`;

exports[`<ReferenceDetailHeaderIcon /> should render when [canModify=false] 1`] = `
<Icon
  color="grey"
  faStyle="fas"
  fixedWidth={false}
  name="lock"
/>
`;

exports[`<ReferenceDetailHeaderIcon /> should render when [isRemote=false] 1`] = `
<Icon
  color="orange"
  faStyle="fas"
  fixedWidth={false}
  name="pencil-alt"
  onClick={[MockFunction]}
  tip="Edit"
/>
`;
